# groceryGPT

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TECHNICAL_NOTES.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: architecture.html
eval/: test_questions.json
results/: eval.md
scripts/: copy_and_stitch.py  make_title_card.py  stitch_demo.sh  webp_to_mp4.py
src/: build_index.py  config.py  evaluate.py  health.py  ingest.py  logger.py  rag.py
tests/: test_rag.py  test_unit.py
